# smart-home-firewall

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  build.sh  classARP_1_1ARP-members.html  classARP_1_1ARP.html  classARP_1_1ARP__coll__graph.map  classARP_1_1ARP__coll__graph.md5  classARP_1_1ARP__inherit__graph.map  classARP_1_1ARP__inherit__graph.md5  classBOOTP_1_1BOOTP-members.html  classBOOTP_1_1BOOTP.html  classBOOTP_1_1BOOTP__coll__graph.map  classBOOTP_1_1BOOTP__coll__graph.md5  classBOOTP_1_1BOOTP__inherit__graph.map  classBOOTP_1_1BOOTP__inherit__graph.md5  classCoAP_1_1CoAP-members.html  classCoAP_1_1CoAP.html  classCoAP_1_1CoAP__coll__graph.map  classCoAP_1_1CoAP__coll__graph.md5  classCoAP_1_1CoAP__inherit__graph.map  classCoAP_1_1CoAP__inherit__graph.md5  classCustom_1_1Custom-members.html  classCustom_1_1Custom.html  classCustom_1_1Custom__coll__graph.map  classCustom_1_1Custom__coll__graph.md5  classCustom_1_1Custom__inherit__graph.map  classCustom_1_1Custom__inherit__graph.md5  classDNS_1_1DNS-members.html  classDNS_1_1DNS.html  classDNS_1_1DNS__coll__graph.map  classDNS_1_1DNS__coll__graph.md5  classDNS_1_1DNS__inherit__graph.map  classDNS_1_1DNS__inherit__graph.md5  classHTTP__Request_1_1HTTP__Request-members.html  (+810 more)
.ci_scripts/cross-compile/: Dockerfile
.ci_scripts/firewall-test/: add_nft_rules.sh  run_tests.sh  translate_profiles.sh
.ci_scripts/full-test/: add_nft_rules.sh  install_packages.sh  run_cppcheck.sh  run_exec.sh  run_tests.sh  translate_profiles.sh  valgrind.supp
.ci_scripts/native-build/: run_cppcheck.sh  run_exec.sh  run_tests.sh  translate_profiles.sh
.ci_scripts/publish-docs/: install_packages.sh
.ci_scripts/test-build/: add_nft_rules.sh  run_cppcheck.sh  run_tests.sh
.github/workflows/: cross-compile.yml  full-test.yml  publish-docs.yml  test-build.yaml
devices/: .gitignore  CMakeLists.txt
devices/amazon-echo/: expanded_profile.yaml  profile.yaml
devices/dlink-cam/: expanded_profile.yaml  mud.yaml  profile.yaml
devices/example/: profile.yaml
devices/humidity-sensor/: profile.yaml
devices/philips-hue/: expanded_profile.yaml  mud.yaml  profile.yaml
devices/smartthings-hub/: expanded_profile.yaml  profile.yaml
devices/temperature-sensor/: profile.yaml
devices/tplink-plug/: expanded_profile.yaml  mud.yaml  profile-attacks.yaml  profile-inter.yaml  profile.yaml
devices/tuya-motion/: expanded_profile.yaml  profile.yaml
devices/xiaomi-cam/: expanded_profile.yaml  mud.yaml  profile.yaml
eval/: README.md  plot_latency_full.py
eval/attacks/: README.md  plot.py  read_each.py
eval/attacks/proto/: attack.py
eval/attacks/stats/: attack.py
eval/cpu/: README.md  methodology.txt  metrics.csv  plot.py  read_each.py  read_one.py  tcp_without_arp.txt
eval/cpu/lookup/: filter_out_attack.sh  filtered.txt  https_wrong_endpoint.py  lan.pcap  metrics.csv  tplink-plug_https-wrong-endpoint_with-attack.csv  wan.pcap  wan.raw.pcap  wlan2.4.pcap  wlan2.4.raw.pcap  wlan5.0.pcap  wlan5.0.raw.pcap
eval/cpu/normal/: filtered.txt  lan.pcap  metrics.csv  wan.pcap  wlan2.4.pcap  wlan5.0.pcap
eval/cpu/state/: filter.sh  filtered.txt  lan.pcap  metrics.csv  top.txt  tplink-plug_tcp-without-arp_with-attack.csv  wan.pcap  wan.raw.pcap  wlan2.4.pcap  wlan2.4.raw.pcap  wlan5.0.pcap  wlan5.0.raw.pcap
eval/cpu/string/: dns_wrong_name.py  filter_out_attack.sh  filtered.txt  lan.pcap  metrics.csv  tplink-plug_dns-wrong-name_with-attack.csv  wan.pcap  wan.raw.pcap  wlan2.4.pcap  wlan2.4.raw.pcap  wlan5.0.pcap  wlan5.0.raw.pcap
eval/fuzzing/: README.md  Vagrantfile  device-pcaps.json  load-configuration.sh
eval/fuzzing/edited/: generate-edited-pcaps.py  link-interactions.py  merge-logs.py  plot.py  replay-edited-pcaps.py  yaml_loaders
eval/latency/: README.md  copy-traces.sh  plot_count_per_category.py  plot_iat_per_category.py  plot_latency_all.py  plot_latency_per_category.py  plot_latency_per_scenario.py  plot_latency_vs_category.py  plot_latency_vs_pktcount.py  read_all.py  read_each.py  read_one.py
eval/loc/: README.md  data.csv  plot.py  read.py
include/: dns_map.h  hashmap.h  nfqueue.h  packet_utils.h  rule_utils.h
include/parsers/: coap.h  dhcp.h  dns.h  header.h  http.h  igmp.h  ssdp.h
openwrt/linksys-wrt1200ac/: config-minimal  toolchain.cmake
openwrt/tl-wdr4900/: config-minimal  toolchain.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  files_0.js  files_1.js  files_2.js  (+47 more)
src/: CMakeLists.txt  dns_map.c  nflog.c  nfqueue.c  packet_utils.c  rule_utils.c
src/parsers/: CMakeLists.txt  coap.c  dhcp.c  dns.c  header.c  http.c  igmp.c  ssdp.c
src/pcap_tweaker/: README.md
src/pcap_tweaker/src/: pcap_tweaker.py
src/pcap_tweaker/src/packet/: ARP.py  BOOTP.py  CoAP.py  DNS.py  HTTP_Request.py  ICMP.py  IGMP.py  IGMPv3mr.py  IPv4.py  IPv6.py  Packet.py  TCP.py  Transport.py  UDP.py  mDNS.py
src/translator/: .gitignore  LogType.py  NFQueue.py  Policy.py  expand.py  translator.py
src/translator/protocols/: Custom.py  Protocol.py  Transport.py  arp.py  coap.py  dhcp.py  dns.py  http.py  icmp.py  icmpv6.py  igmp.py  ip.py  ipv4.py  ipv6.py  mdns.py  ssdp.py  tcp.py  udp.py
src/translator/templates/: CMakeLists.txt.j2  callback.c.j2  firewall.nft.j2  header.c.j2  main.c.j2
src/translator/yaml_loaders/: IgnoreLoader.py  IncludeLoader.py
test/: .gitignore  CMakeLists.txt  dns_map.c  packet_utils.c  profile-full.yaml  profile-small.yaml
test/device/: .gitignore  profile.yaml
test/parsers/: CMakeLists.txt  coap.c  dhcp.c  dns.c  header.c  http.c  igmp.c  ssdp.c
test/test-device/: CMakeLists.txt  profile.yaml
test/unit/: CMakeLists.txt  rule_utils.c
(+796 files in other folders)
